syntax = "proto3";

package product.v1;

option go_package = "github.com/light-bringer/procat-service/proto/product/v1;productv1";

import "google/protobuf/timestamp.proto";

// ProductService provides operations for product catalog management.
service ProductService {
  // Commands (write operations)
  rpc CreateProduct(CreateProductRequest) returns (CreateProductReply);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductReply);
  rpc ActivateProduct(ActivateProductRequest) returns (ActivateProductReply);
  rpc DeactivateProduct(DeactivateProductRequest) returns (DeactivateProductReply);
  rpc ApplyDiscount(ApplyDiscountRequest) returns (ApplyDiscountReply);
  rpc RemoveDiscount(RemoveDiscountRequest) returns (RemoveDiscountReply);
  rpc ArchiveProduct(ArchiveProductRequest) returns (ArchiveProductReply);

  // Queries (read operations)
  rpc GetProduct(GetProductRequest) returns (GetProductReply);
  rpc ListProducts(ListProductsRequest) returns (ListProductsReply);
}

// Money represents a monetary value with precise decimal representation.
message Money {
  int64 numerator = 1;
  int64 denominator = 2;
}

// Product represents a product in the catalog.
message Product {
  string product_id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  double base_price = 5;
  double effective_price = 6;
  optional int64 discount_percent = 7;
  bool discount_active = 8;
  string status = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

// CreateProduct
message CreateProductRequest {
  string name = 1;
  string description = 2;
  string category = 3;
  Money base_price = 4;
}

message CreateProductReply {
  string product_id = 1;
}

// UpdateProduct
message UpdateProductRequest {
  string product_id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string category = 4;
}

message UpdateProductReply {
  // Empty - success indicated by no error
}

// ActivateProduct
message ActivateProductRequest {
  string product_id = 1;
}

message ActivateProductReply {
  // Empty - success indicated by no error
}

// DeactivateProduct
message DeactivateProductRequest {
  string product_id = 1;
}

message DeactivateProductReply {
  // Empty - success indicated by no error
}

// ApplyDiscount
message ApplyDiscountRequest {
  string product_id = 1;
  int64 discount_percent = 2;
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
}

message ApplyDiscountReply {
  // Empty - success indicated by no error
}

// RemoveDiscount
message RemoveDiscountRequest {
  string product_id = 1;
}

message RemoveDiscountReply {
  // Empty - success indicated by no error
}

// ArchiveProduct
message ArchiveProductRequest {
  string product_id = 1;
}

message ArchiveProductReply {
  // Empty - success indicated by no error
}

// GetProduct
message GetProductRequest {
  string product_id = 1;
}

message GetProductReply {
  Product product = 1;
}

// ListProducts
message ListProductsRequest {
  string category = 1;
  string status = 2;
  int32 page_size = 3;
  string page_token = 4;
}

message ListProductsReply {
  repeated Product products = 1;
  string next_page_token = 2;
  int64 total_count = 3;
}
